--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <body>
     <h1>Hello World!</h1>
     <p>My second GITHUB hosting</p>
-    <p>Change in Github repo</p>
-    <p>Second change</p>
-    <p>Third change</p>
-    <p>forth change...</p>
+    <p>Change in Codesandbox...</p>
   </body>
 </html>
